<resources>
    <string name="app_name">Room Control</string>
    <string name="connect_your_google_account_to_sign_in">Connect Your Google Account to Sign in</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="client_type">Client Type</string>
    <string name="choose_client_type">Choose client type</string>
    <string name="Type">Type: </string>
    <string name="apply_client_type">Apply Client Type</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="add_property">Add Property</string>
    <string name="room_type">Room Type:</string>
    <string name="furnished">Furnished ?</string>
    <string name="address">Address</string>
    <string name="comfirm_edit">Comfirm Edit</string>
    <string name="invite_code">Invite Code:</string>
    <string name="property_address">Property Address</string>
    <string name="property_price">Property Price</string>
    <string name="bill_date">Bill Date</string>
    <string name="occupant">Occupant:</string>
    <string name="current_rent">Current Rent:</string>
    <string name="add_rent">Add Rent</string>
    <string name="enter_invite_code">Enter Invite Code</string>
    <string name="ok">OK</string>
    <string name="rent_per_month">Rent per month</string>
    <string name="remove_rent">Remove Rent</string>
    <string name="room_control">Room Control</string>
</resources>