<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TenantMain">

    <Button
        android:id="@+id/tenantSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/tenantWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tenantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/tenantRefreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_gravity="end"
        android:text="@string/refresh_data" />

    <TextView
        android:id="@+id/tenantCurrentRentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_rent"
        android:textSize="24sp"
        android:layout_margin="6dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/tenantRentListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/tenantAddRentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_rent" />

</LinearLayout>