<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentView">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/rentViewLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/rentViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewInviteCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_code"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent_per_month"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewBillDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_date"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewRoomType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewFurnished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/furnished"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/rentViewOccupantList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupant"
            android:textSize="24sp"
            android:layout_margin="6dp"/>

        <LinearLayout
            android:id="@+id/rentViewOccupantLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/rentViewRemoveRentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_rent"
            android:layout_margin="6dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>