<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandlordMain">

    <Button
        android:id="@+id/landlordSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="end"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/landLordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/landlordRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_data"
        android:layout_gravity="end"
        android:layout_margin="6dp"/>

    <TextView
        android:id="@+id/landLordTotalRevenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Revenue"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/landlordScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/landLordAddPropertyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_property"
        android:layout_gravity="end"
        android:layout_margin="6dp"/>

</LinearLayout>